# typecheck

./: .gitignore  README.md  ast.py  pyproject.toml  syntree.py  typ.py  typecheck.py  types.py
tests/: test_typecheck.py
typecheck/: syntree.py  typ.py  typecheck.py
