
[project]
name = "typecheck"
version = "0.1.0"
description = "Writing a simple type checker as a learning experience"
authors = [{ name = "mverleg" }]
license = { text = "tbd" }

[project.urls]
homepage = "https://github.com/mverleg/typecheck"

[testenv]
deps = ["pytest", "mypy"]
commands = "pytest"

[build-system]
requires = ["setuptools", "wheel", "mypy"]

